hphp/test/zend/good/Zend/tests/traits/bug60165c.php.expectf

Fatal error: Unknown trait '' in %s/bug60165c.php on line 11
